Bug 478014 - "Switch on Desktop Edge" setting generates screen edge glow for edges that have no virtual desktop on the other side of them
Summary: "Switch on Desktop Edge" setting generates screen edge glow for edges that ha...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Hotcorners and edges (other bugs)
Version First Reported In: master
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-03 23:39 UTC by Ethan J
Modified: 2024-09-26 15:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ethan J 2023-12-03 23:39:41 UTC
SUMMARY
Switch on Desktop Edge allows the user to switch virtual desktops just by moving the cursor to an edge of the screen.  I find it very useful for dragging windows to other virtual desktops.  The UI uses the screen edge glows to indicate this is going to occur, which is very useful.  However, it is very misleading and unintuitive when the glow shows even when there is no desktop to go to in that direction.  An edge glow should only appear when there is a desktop that can be switched to.

STEPS TO REPRODUCE
1. Enable Switch on Desktop Edge (either on Always or Only While Dragging windows).
2. Move the cursor (or drag a window) to an edge of the screen where there is no virtual desktop to switch to.

OBSERVED RESULT
The glow appears regardless of whether or not a virtual desktop can be switched to in that direction.  This is misleading and makes the experience feel very unpolished.

EXPECTED RESULT
The glow should only appear when there is a virtual desktop that can be switched to in that direction.  This is much more intuitive.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 39
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11
Kernel Version: 6.6.2-201.fc39.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 1 Ethan J 2024-05-14 23:41:09 UTC
This issue still exists in Plasma 6
Comment 2 Bug Janitor Service 2024-09-25 16:44:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6499
Comment 3 Zamundaaa 2024-09-26 13:47:24 UTC
Git commit 9f3978b62d1581fa5d2f366cb90373e4d8075179 by Xaver Hugl.
Committed on 26/09/2024 at 13:38.
Pushed by zamundaaa into branch 'master'.

screenedge: deactivate if virtual desktop switching won't actually do anything

Otherwise, the screen edge glow is wrongly shown

M  +11   -5    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/9f3978b62d1581fa5d2f366cb90373e4d8075179
Comment 4 Zamundaaa 2024-09-26 14:36:15 UTC
Git commit 063b48665557981c196337aa2c6b9c06735bfb22 by Xaver Hugl.
Committed on 26/09/2024 at 13:59.
Pushed by vladz into branch 'Plasma/6.2'.

screenedge: deactivate if virtual desktop switching won't actually do anything

Otherwise, the screen edge glow is wrongly shown


(cherry picked from commit 9f3978b62d1581fa5d2f366cb90373e4d8075179)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +11   -5    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/063b48665557981c196337aa2c6b9c06735bfb22