screenedge: deactivate if virtual desktop switching won't actually do anything

Otherwise, the screen edge glow is wrongly shown

BUG: 478014


(cherry picked from commit 9f3978b62d1581fa5d2f366cb90373e4d8075179)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>